# snake

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
include/: Color.hpp  Entity.hpp  Fruit.hpp  Game.hpp  GameField.hpp  Point.hpp  Snake.hpp  SnakePart.hpp  config.hpp  util.hpp
src/: Color.hpp  Entity.cpp  Entity.hpp  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  GameField.cpp  GameField.hpp  Point.hpp  Snake.cpp  Snake.hpp  SnakePart.cpp  SnakePart.hpp  colors.hpp  main.cpp  util.cpp  util.hpp
tests/: Entity.Test.cpp  Game.Test.cpp  GameField.Test.cpp  Snake.Test.cpp  SnakeMovementTuple.hpp  SnakePart.Test.cpp  main.cpp  util.Test.cpp
